btn fix on mobile version fz 2

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -19,6 +19,10 @@
 
     @media screen and (max-width: 425px) {
         width: 100%;
+        font-size: 16px;
+        padding: 2rem 3rem;
+        border-radius: 3rem;
+        box-shadow: 0px 4px 200px 0px rgba(255, 222, 64, 0.59);
     }
 
     &--sm {
